// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainSearch component should render 1`] = `
<DocumentFragment>
  <form
    aria-label="Main search"
    class="main-search"
    style="--main-button-color: #00639a;"
  >
    <div
      class="main-search__input"
    >
      <input
        aria-label="Text query"
        class="main-search__input"
        type="text"
        value=""
      />
    </div>
    <button
      class="button primary"
      type="submit"
    >
      Search
    </button>
  </form>
</DocumentFragment>
`;

exports[`MainSearch component should render with namespaces selector 1`] = `
<DocumentFragment>
  <form
    aria-label="Main search"
    class="main-search"
    style="--main-button-color: #00639a;"
  >
    <div
      class="dropdown-container"
    >
      <button
        class="button primary dropdown"
        type="button"
      >
        One
      </button>
      <div
        class="dropdown-menu"
      />
    </div>
    <div
      class="main-search__input"
    >
      <input
        aria-label="Text query in one"
        class="main-search__input"
        type="text"
        value=""
      />
    </div>
    <button
      class="button primary"
      type="submit"
    >
      Search
    </button>
  </form>
</DocumentFragment>
`;
